# combustion

./: .gitignore  .gitmodules  Cargo.toml  README.md  lc.sh
backend/: Cargo.toml
backend/examples/: glfw.rs  winapi.rs
backend/src/: command.rs  lib.rs  window.rs
backend/src/generic/: color.rs
backend/src/gl/: gl_buffer.rs  gl_debug.rs  gl_error.rs  gl_framebuffer.rs  gl_material.rs  gl_object.rs  gl_renderbuffer.rs  gl_shader.rs  gl_texture.rs  macros.rs  mod.rs
backend/src/win32/: mod.rs
combustion_asset/: Cargo.toml  README.md
combustion_asset/examples/: model.rs  sphere.dae  texture.rs
combustion_asset/src/: asset.rs  cache.rs  error.rs  lib.rs  model.rs  path.rs
combustion_asset/src/assets/: mod.rs  model.rs  texture.rs
combustion_asset/src/material/: mod.rs
combustion_asset/src/model/: asset.rs
combustion_asset/src/traits/: asset.rs  mod.rs
combustion_asset/src/vfs/: default.rs  mmap.rs  mod.rs  null.rs
combustion_audio/: Cargo.toml  README.md
combustion_audio/src/: lib.rs
combustion_audio/src/components/: mod.rs  music.rs
combustion_backend/: Cargo.toml  README.md
combustion_backend/examples/: glfw.rs  winapi.rs
combustion_backend/src/: command.rs  error.rs  lib.rs  window.rs
combustion_backend/src/backends/: mod.rs
combustion_backend/src/generic/: color.rs
combustion_backend/src/gl/: buffer.rs  debug.rs  error.rs  framebuffer.rs  gl_buffer.rs  gl_debug.rs  gl_error.rs  gl_framebuffer.rs  gl_renderbuffer.rs  gl_requires.rs  gl_shader.rs  gl_shader_program.rs  gl_texture.rs  gl_uniform.rs  gl_vertexarray.rs  mod.rs  requires.rs  shader.rs  shader_program.rs  texture.rs  uniform.rs  vertex_array.rs
combustion_backend/src/resource/: mod.rs  texture.rs
combustion_backend/tests/: requires.rs
combustion_common/: Cargo.toml  README.md
combustion_common/examples/: backtrace.rs  log.rs
combustion_common/src/: backtrace.rs  bt.rs  color.rs  compression.rs  error.rs  ext.rs  humanize.rs  lib.rs  log.rs  macros.rs  num_utils.rs  parallel.rs  preprocessor.rs  utils.rs
combustion_common/src/color/: blend.rs  ext.rs  image.rs  mod.rs  ops.rs  tonemap.rs
combustion_common/src/streams/: definitions.rs  lazy_buffer.rs  mod.rs  read_only.rs  utils.rs
combustion_common/src/structures/: freelist.rs  mod.rs
combustion_common/src/traits/: mod.rs  named.rs
combustion_common/src/utils/: humanize.rs  mod.rs  stopwatch.rs
combustion_common/src/vfs/: default.rs  mmap.rs  mod.rs  null.rs
combustion_core/: Cargo.toml
combustion_core/src/: error.rs  lib.rs
combustion_core/src/scene/: sourcemap.rs
combustion_core/src/scheduler/: error.rs  mod.rs
combustion_ecs/: Cargo.toml
combustion_ecs/src/: builder.rs  error.rs  lib.rs  macros.rs  system.rs
combustion_engine/: Cargo.toml
combustion_engine/src/: lib.rs
combustion_engine/src/components/: gpu_buffer.rs  instanced.rs  material.rs  mod.rs  model.rs
combustion_engine/src/entities/: camera.rs
combustion_engine/src/game/: mod.rs
combustion_engine/src/scene/: loading.rs  mesh_cache.rs  mod.rs
combustion_events/: Cargo.toml
combustion_events/src/: lib.rs
combustion_events/src/event_emitter/: error.rs  mod.rs  parallel.rs
combustion_events/tests/: bugs.rs  event_emitter.rs  parallel.rs
combustion_game/: Cargo.toml
combustion_game/src/: lib.rs
combustion_game/src/components/: camera.rs  light.rs  mesh.rs  mod.rs  node.rs  renderable.rs
combustion_game/src/old_bin/: test.rs
combustion_game/src/resources/: event_queue.rs  projection.rs  scene_graph.rs
combustion_game/src/systems/: clean.rs
combustion_log/: Cargo.toml
combustion_log/src/: error.rs  ext.rs  lib.rs  log.rs
combustion_plugin/: Cargo.toml
combustion_plugin/src/: lib.rs  version.rs
combustion_protocols/: Cargo.toml  README.md  build.rs
combustion_protocols/cpp/: math.capnp.c++  math.capnp.h  mesh.capnp.c++  mesh.capnp.h  model.capnp.c++  model.capnp.h  texture.capnp.c++  texture.capnp.h  utils.capnp.c++  utils.capnp.h
combustion_protocols/protocols/: math.capnp  mesh.capnp  model.capnp  texture.capnp  utils.capnp
combustion_protocols/src/: blob.rs  error.rs  lib.rs  traits.rs
combustion_protocols/src/material/: anisotropy.rs  defaults.rs  mod.rs  sample.rs
combustion_protocols/src/math/: data.rs  mod.rs  protocol.rs  storage.rs
combustion_protocols/src/mesh/: data.rs  mod.rs  protocol.rs  storage.rs
combustion_protocols/src/model/: data.rs  defaults.rs  mod.rs  protocol.rs  storage.rs
combustion_protocols/src/scene/: defaults.rs  mod.rs  sample.rs
combustion_protocols/src/texture/: gl.rs  mod.rs  protocol.rs  storage.rs
combustion_protocols/src/utils/: mod.rs
combustion_protocols/tests/: material.yaml  material_sample.rs  scene_sample.rs
combustion_scene/: Cargo.toml  README.md
combustion_scene/src/: error.rs  graph.rs  lib.rs  node.rs
combustion_scene/src/edge/: mod.rs
combustion_scene/src/node/: entity_node.rs  mod.rs  multi_entity_node.rs
combustion_scripting/: Cargo.toml
combustion_window/: Cargo.toml
combustion_window/examples/: glfw.rs  glutin.rs
combustion_window/src/: error.rs  lib.rs  provider.rs
combustion_window/src/providers/: mod.rs
common/: Cargo.toml
common/examples/: log.rs
common/src/: error.rs  lib.rs  log.rs  macros.rs  utils.rs
common/src/structures/: freelist.rs
engine/: Cargo.toml  build.rs
engine/models/: hairball.obj.REMOVED.git-id
engine/shaders/: brdf.frag  brdf.vert  deferred_geometry.frag  deferred_lighting.frag  deferred_lighting.vert  lighting_pbr.glsl  lighting_phong.glsl  screen.frag  screen.vert  skybox.frag  text.vert  toon.vert
engine/src/: lib.rs  main.rs  main_old.rs
protocols/: Cargo.toml  build.rs
protocols/cpp/: math.capnp.c++  math.capnp.h  model.capnp.c++  model.capnp.h
protocols/protocols/: math.capnp  model.capnp  texture.capnp  utils.capnp
protocols/src/: lib.rs  math.rs  mod.rs  named.rs
protocols/tests/: material.yaml  material_sample.rs
tools/model_converter/: Cargo.toml
tools/texture_compressor/: Cargo.toml
tools/texture_viewer/: Cargo.toml  uv_test_8K.ctex.REMOVED.git-id
(+311 files in other folders)
