[workspace]
members = [
	"combustion_common", "combustion_backend", "combustion_protocols", "combustion_engine", "combustion_geometry", "combustion_scripting", "combustion_asset",
	"tools/texture_compressor", "tools/texture_viewer", "tools/model_converter", "tools/material_viewer",
	"deps/tinyfiledialogs", "deps/lz4-rs", "deps/assimp-sys", "deps/assimp-rs", "deps/lazy", 
	"deps/luajit-sys", "deps/luajit-rs", "deps/squirrel-sys", "deps/squirrel-rs",
	"deps/nalgebra", "deps/capnpc-rust"
]