[package]
authors = ["novacrazy <novacrazy@gmail.com>"]
exclude = ["*.png"]
include = ["Cargo.toml", "src/**/*.rs"]
license = "MIT"
name = "combustion_backend"
version = "0.1.0"

[dependencies]
enum_primitive = "0.1.0"
image = "0.10.4"
lazy_static = "0.2.2"
libc = "0.2.17"
nalgebra = "0.10.1"
num-traits = "0.1.36"
regex = "0.1.80"
vec_map = "0.6.0"

[dependencies.combustion_common]
path = "../common/"

[dependencies.lazy]
path = "E:/code/projects/2016/lazy"

[dependencies.palette]
git = "git://github.com/Ogeon/palette.git"

# [lib]
# crate-type = ["staticlib"]
# name = "combustion_backend"
