[package]
authors = ["novacrazy <novacrazy@gmail.com>"]
exclude = ["*.png"]
include = ["Cargo.toml", "src/**/*.rs"]
license = "MIT"
name = "combustion_backend"
version = "0.1.0"

[dependencies]
enum_primitive = "0.1.0"
image = "0.10.4"
lazy_static = "0.2.2"
libc = "0.2.17"
num-traits = "0.1.36"
regex = "0.1.80"
serde = "0.8.19"
serde_derive = "0.8.19"
vec_map = "0.6.0"
void = "1.0.2"

[dependencies.combustion_common]
path = "../common/"

[dependencies.d3d11-sys]
optional = true
version = "0.2.0"

[dependencies.d3d12-sys]
optional = true
version = "0.2.0"

[dependencies.d3dcompiler-sys]
optional = true
version = "0.2.0"

[dependencies.dxgi-sys]
optional = true
version = "0.2.0"

[dependencies.gdi32-sys]
optional = true
version = "0.2.0"

[dependencies.glfw]
features = ["all"]
version = "0.11.0"

[dependencies.kernel32-sys]
optional = true
version = "0.2.2"

[dependencies.lazy]
path = "../deps/lazy"

[dependencies.nalgebra]
path = "../deps/nalgebra"

[dependencies.palette]
git = "git://github.com/Ogeon/palette.git"

[dependencies.user32-sys]
optional = true
version = "0.2.0"

[dependencies.vk-sys]
optional = true
version = "0.2.1"

[dependencies.winapi]
optional = true
version = "0.2.8"

[features]
all = ["gl", "vulkan", "dx11"]
default = ["gl"]
dx11 = ["winapi", "gdi32-sys", "kernel32-sys", "user32-sys", "d3d11-sys", "d3dcompiler-sys", "dxgi-sys"]
dx12 = ["dx11", "d3d12-sys"]
gl = []
vulkan = ["vk-sys"]
