[package]
authors = ["Aaron Trent <novacrazy@gmail.com>"]
name = "combustion_asset"
publish = false
version = "0.1.0"

[dependencies]
capnp = "0.8"
phf = "0.7.20"
phf_macros = "0.7.20"
rayon = "0.6.0"
serde = "0.9"
serde_derive = "0.9"
trace-error = "0.1.3"

[dependencies.image]
version = "0.12.2"
# These are intentionally redundant
features = ["default", "gif_codec", "jpeg", "ico", "png_codec", "ppm", "tga", "tiff", "webp", "bmp", "hdr"]

[dependencies.assimp]
features = ["default", "compat"]
git = "https://github.com/combustion-engine/assimp-rs"

[dependencies.capnpc]
git = "https://github.com/combustion-engine/capnpc-rust"

[dependencies.combustion_common]
path = "../combustion_common"

[dependencies.combustion_protocols]
path = "../combustion_protocols"

[dependencies.lz4]
git = "https://github.com/novacrazy/lz4-rs"

[dependencies.nalgebra]
git = "https://github.com/combustion-engine/nalgebra"
