[package]
authors = ["Aaron Trent <novacrazy@gmail.com>"]
name = "combustion_asset"
publish = false
version = "0.1.0"

[dependencies]
capnp = "0.8"
fnv = "1.0.5"
matches = "0.1.4"
phf = "0.7.20"
phf_macros = "0.7.20"
rayon = "0.6.0"
serde = "0.9"
serde_derive = "0.9"
trace-error = "0.1.3"

[dependencies.assimp]
features = ["default", "compat"]
git = "https://github.com/combustion-engine/assimp-rs"
optional = true

[dependencies.bincode]
optional = true
version = "1.0.0-alpha2"

[dependencies.capnpc]
git = "https://github.com/combustion-engine/capnpc-rust"

[dependencies.combustion_common]
features = ["default", "mmap"]
path = "../combustion_common"

[dependencies.combustion_protocols]
path = "../combustion_protocols"

[dependencies.flate2]
optional = true
version = "0.2.17"

[dependencies.image]
features = ["default", "gif_codec", "jpeg", "ico", "png_codec", "ppm", "tga", "tiff", "webp", "bmp", "hdr"]
version = "0.12.2"

[dependencies.lz4]
git = "https://github.com/novacrazy/lz4-rs"

[dependencies.nalgebra]
git = "https://github.com/combustion-engine/nalgebra"

[dependencies.serde_json]
optional = true
version = "0.9.6"

[dependencies.serde_yaml]
optional = true
version = "0.6.1"

[dependencies.tar]
optional = true
version = "0.4.10"

[dependencies.toml]
optional = true
version = "0.3.0"

[dependencies.zip]
optional = true
version = "0.2.0"

[features]
all = ["standard", "bundle", "assimp"]
bundle = ["tar", "zip", "flate2"]
default = ["all"]
json = ["serde_json"]
standard = ["json", "bincode", "yaml", "toml"]
yaml = ["serde_yaml"]
