[package]
authors = ["Aaron Trent <novacrazy@gmail.com>"]
name = "combustion_audio"
version = "0.1.0"

[dependencies]
lewton = "0.4.1"
ogg = "0.4.0"

[dependencies.combustion_macros]
path = "../combustion_macros"

[dependencies.combustion_asset]
path = "../combustion_asset"

[dependencies.combustion_common]
path = "../combustion_common"

[dependencies.combustion_ecs]
path = "../combustion_ecs"

[dependencies.openalsoft-rs]
path = "../deps/openalsoft-rs"