[package]
authors = ["novacrazy <novacrazy@gmail.com>"]
exclude = ["*.png"]
include = ["Cargo.toml", "src/**/*.rs"]
license = "MIT"
name = "combustion_backend"
publish = false
version = "0.1.0"

[dependencies]
enum_primitive = "0.1"
fnv = "1"
image = "0.12"
lazy_static = "0.2"
libc = "0.2"
serde = "0.9"
serde_derive = "0.9"
trace-error = "0.1"
void = "1"

[dependencies.combustion_common]
path = "../combustion_common/"

[dependencies.combustion_protocols]
path = "../combustion_protocols/"

[dependencies.d3d11-sys]
optional = true
version = "0.2.0"

[dependencies.d3d12-sys]
optional = true
version = "0.2.0"

[dependencies.d3dcompiler-sys]
optional = true
version = "0.2.0"

[dependencies.dxgi-sys]
optional = true
version = "0.2.0"

[dependencies.gdi32-sys]
optional = true
version = "0.2.0"

[dependencies.glfw]
features = ["all"]
version = "0.12.0"

[dependencies.kernel32-sys]
optional = true
version = "0.2.2"

[dependencies.nalgebra]
git = "https://github.com/combustion-engine/nalgebra"

[dependencies.user32-sys]
optional = true
version = "0.2.0"

[dependencies.vk-sys]
optional = true
version = "0.2.1"

[dependencies.winapi]
optional = true
version = "0.2.8"

[features]
all = ["gl", "vulkan", "dx11"]
default = ["gl"]
dx11 = ["winapi", "gdi32-sys", "kernel32-sys", "user32-sys", "d3d11-sys", "d3dcompiler-sys", "dxgi-sys"]
dx12 = ["dx11", "d3d12-sys"]
gl = []
vulkan = ["vk-sys"]
