[package]
authors = ["novacrazy <novacrazy@gmail.com>"]
exclude = ["*.png"]
include = ["Cargo.toml", "src/**/*.rs"]
license = "MIT"
name = "combustion_common"
version = "0.2.0"
publish = false

[dependencies]
chrono = "0.2"
lazy_static = "0.2"
num-traits = "0.1"
rand = "0.3"
regex = "0.2"
serde = "0.9"
serde_derive = "0.9"
slog = "1.4"
slog-atomic = "0.4"
slog-scope = "0.2"
slog-stream = "1.2"
slog-term = "1.3"
statrs = "0.4"
time = "0.1"
trace-error = "0.1"
vec_map = "0.6"
void = "1.0"

[dependencies.lz4]
git = "https://github.com/novacrazy/lz4-rs"

[dependencies.nalgebra]
path = "../deps/nalgebra"

[dependencies.palette]
git = "git://github.com/Ogeon/palette.git"

[dependencies.tinyfiledialogs]
git = "https://github.com/novacrazy/tinyfiledialogs-rs"