[package]
authors = ["novacrazy <novacrazy@gmail.com>"]
exclude = ["*.png"]
include = ["Cargo.toml", "src/**/*.rs"]
license = "MIT"
name = "combustion_common"
version = "0.2.0"
publish = false

[dependencies]
num-traits = "0.1"
rand = "0.3"
serde = "0.9"
serde_derive = "0.9"
time = "0.1"
vec_map = "0.7"
void = "1.0"

[dependencies.lz4]
git = "https://github.com/novacrazy/lz4-rs"

[dependencies.nalgebra]
git = "https://github.com/combustion-engine/nalgebra"

[dependencies.palette]
git = "git://github.com/Ogeon/palette.git"

[dependencies.memmap]
optional = true
version = "0.5.0"

[features]
default = ["mmap"]
mmap = ["memmap"]