[package]
authors = ["novacrazy <novacrazy@gmail.com>"]
exclude = ["*.png"]
include = ["Cargo.toml", "src/**/*.rs"]
license = "MIT"
name = "combustion_common"
publish = false
version = "0.2.0"

[dependencies]
num-traits = "0.1"
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
time = "0.1"
vec_map = "0.7"
void = "1.0"

[dependencies.nalgebra]
version = "0.12.0"
features = ["serde-serialize"]

[dependencies.lz4]
git = "https://github.com/novacrazy/lz4-rs"

[dependencies.memmap]
optional = true
version = "0.5.0"

[dependencies.palette]
git = "git://github.com/Ogeon/palette.git"

[features]
default = ["mmap"]
mmap = ["memmap"]
