[package]
name = "combustion_core"
authors = ["novacrazy <novacrazy@gmail.com>"]
include = ["Cargo.toml", "src/**/*.rs"]
version = "0.1.0"

[dependencies.combustion_backend]
path = "../combustion_backend"

[dependencies.combustion_common]
path = "../combustion_common"

[dependencies.combustion_protocols]
path = "../combustion_protocols"

[dependencies.combustion_asset]
path = "../combustion_asset"

[dependencies]
chrono = "0.2.25"
enum_primitive = "0.1.0"
lazy_static = "0.2.2"
libc = "0.2.17"
num-traits = "0.1.36"
num_cpus = "1.1.0"
time = "0.1.35"
vec_map = "0.6.0"

[dependencies.lazy]
path = "../deps/lazy"

[dependencies.nalgebra]
path = "../deps/nalgebra"

[dependencies.palette]
git = "git://github.com/Ogeon/palette.git"