[package]
authors = ["Aaron Trent <novacrazy@gmail.com>"]
name = "combustion_ecs"
version = "0.1.0"

[dependencies]
daggy = "0.4.1"
num_cpus = "1.1.0"

[dependencies.combustion_common]
path = "../combustion_common"

[dependencies.specs]
features = ["parallel"]
git = "git://github.com/slide-rs/specs.git"
