[package]
authors = ["Aaron Trent <novacrazy@gmail.com>"]
name = "combustion_ecs"
version = "0.1.0"
publish = false

[dependencies]
fnv = "1.0.5"
# num_cpus = "1.1.0"
petgraph = "0.4.1"

[dependencies.combustion_common]
path = "../combustion_common"

[dependencies.specs]
features = ["parallel"]
git = "git://github.com/slide-rs/specs.git"
