[package]
authors = ["Aaron Trent <novacrazy@gmail.com>"]
name = "combustion_events"
version = "0.1.0"
publish = false

[dependencies]
fnv = "1.0.5"
futures = "0.1.9"

[dependencies.combustion_common]
path = "../combustion_common"

[dependencies.parallel-event-emitter]
features = ["default", "integer_atomics", "conservative_impl_trait"]
version = "0.2"
