[package]
name = "combustion_game"
authors = ["novacrazy <novacrazy@gmail.com>"]
include = ["Cargo.toml", "src/**/*.rs"]
version = "0.1.0"
publish = false

[[bin]]
name = "test"
path = "src/bin/test.rs"

[profile.release]
opt-level = 3
debug = false
lto = false
debug-assertions = false

[dependencies.combustion_macros]
path = "../combustion_macros"

[dependencies.combustion_core]
path = "../combustion_core"

[dependencies]
chrono = "0.2.25"
enum_primitive = "0.1.0"
lazy_static = "0.2.2"
libc = "0.2.17"
num-traits = "0.1.36"
num_cpus = "1.1.0"
time = "0.1.35"
vec_map = "0.6.0"

[dependencies.nalgebra]
git = "https://github.com/combustion-engine/nalgebra"

[dependencies.palette]
git = "git://github.com/Ogeon/palette.git"