[package]
authors = ["Aaron Trent <novacrazy@gmail.com>"]
name = "combustion_plugin"
version = "0.1.0"
publish = false

[dependencies]
lazy_static = "0.2.2"
libloading = "0.3.1"
semver = "0.5"
serde = "0.9"
serde_derive = "0.9"

[dependencies.dlib]
features = ["dlopen"]
version = "0.3.1"

[dependencies.toml]
features = ["serde"]
version = "0.2.1"
