[package]
name = "scripting"
version = "0.1.0"
authors = ["Aaron Trent <novacrazy@gmail.com>"]
publish = false

[dependencies.combustion_backend]
path = "../combustion_backend"

[dependencies.combustion_common]
path = "../combustion_common"

[dependencies.combustion_protocols]
path = "../combustion_protocols"

[dependencies]