[package]
authors = ["Aaron Trent <novacrazy@gmail.com>"]
name = "combustion_window"
version = "0.1.0"

[dependencies]
trace-error = "0.1.4"

[dependencies.combustion_common]
path = "../combustion_common"

[dependencies.glfw]
optional = true
version = "0.13.0"

[dependencies.glutin]
optional = true
version = "0.7.4"

[dependencies.winit]
optional = true
version = "0.5.11"

[features]
default = ["glfw"]
