[package]
authors = ["novacrazy <novacrazy@gmail.com>"]
exclude = ["*.png"]
include = ["Cargo.toml", "src/**/*.rs"]
license = "MIT"
name = "combustion_common"
version = "0.1.0"

[dependencies]
chrono = "0.2.25"
lazy_static = "0.2.2"
num-traits = "0.1.36"
regex = "0.1.80"
slog = "1.3.2"
slog-atomic = "0.4.3"
slog-scope = "0.2.2"
slog-stream = "1.2.0"
slog-term = "1.3.3"
vec_map = "0.6.0"