[package]
authors = ["novacrazy <novacrazy@gmail.com>"]
exclude = ["*.png"]
include = ["Cargo.toml", "src/**/*.rs"]
license = "MIT"
name = "combustion"
version = "0.1.0"

[build-dependencies.combustion_common]
path = "../common"

[dependencies.combustion_backend]
path = "../backend"

[dependencies.combustion_common]
path = "../common"

[dependencies.combustion_protocols]
path = "../protocols"

[dependencies]
capnp = "0.7.5"
capnpc = "0.7.5"
chrono = "0.2.25"
enum_primitive = "0.1.0"
image = "0.10.3"
lazy_static = "0.2.2"
libc = "0.2.17"
nalgebra = {path = "../deps/nalgebra"}
num-traits = "0.1.36"
num_cpus = "1.1.0"
oncemutex = "0.1.1"
petgraph = "0.4.1"
regex = "0.1.80"
rusttype = "0.2.1"
time = "0.1.35"
vec_map = "0.6.0"

[dependencies.assimp]
features = ["default", "compat"]
path = "../deps/assimp-rs"

[dependencies.lazy]
path = "../deps/lazy"

[dependencies.nice_glfw]
path = "../deps/nice_glfw"

[dependencies.squirrel-rs]
path = "../deps/squirrel-rs"

[dependencies.glfw]
features = ["all"]
version = "0.11.0"

[dependencies.palette]
git = "git://github.com/Ogeon/palette.git"

[dependencies.specs]
features = ["parallel"]
git = "git://github.com/slide-rs/specs.git"