[package]
authors = ["novacrazy <novacrazy@gmail.com>"]
build = "build.rs"
exclude = ["*.png"]
include = ["Cargo.toml", "src/**/*.rs", "src/**/*.capnp"]
license = "MIT"
name = "combustion_protocols"
version = "0.1.0"

[build-dependencies]
capnpc = "0.7.5"

[build-dependencies.combustion_common]
path = "../common"

[dependencies]
capnp = "0.7.5"
capnpc = "0.7.5"
lz4 = "1.20.0"
phf = "0.7.20"
phf_macros = "0.7.20"

[dependencies.assimp]
features = ["default", "compat"]
path = "../deps/assimp-rs"

[dependencies.combustion_backend]
path = "../backend"

[dependencies.combustion_common]
path = "../common/"
