[package]
authors = ["novacrazy <novacrazy@gmail.com>"]
build = "build.rs"
exclude = ["*.png"]
include = ["Cargo.toml", "src/**/*.rs", "src/**/*.capnp"]
license = "MIT"
name = "combustion_protocols"
version = "0.1.0"

[build-dependencies]
capnpc = "0.7.5"

[build-dependencies.combustion_common]
path = "../common"

[dependencies]
capnp = "0.7.5"
capnpc = "0.7.5"
phf = "0.7.20"
phf_macros = "0.7.20"
serde = "0.8.19"
serde_derive = "0.8.19"
serde_json = "0.8.4"
nalgebra = {path = "../deps/nalgebra"}

[dependencies.assimp]
features = ["default", "compat"]
path = "../deps/assimp-rs"

[dependencies.combustion_backend]
path = "../backend"

[dependencies.combustion_common]
path = "../common/"

[dependencies.lz4]
path = "../deps/lz4-rs"
