[package]
authors = ["Aaron Trent <novacrazy@gmail.com>"]
name = "texture_compressor"
version = "0.1.0"

[[bin]]
name = "texture_compressor"
path = "src/main.rs"

[dependencies]
capnp = "0.7.5"
capnpc = "0.7.5"
clap = "2.19.1"
glfw = "0.11.0"
glob = "0.2.11"
image = "0.10.4"

[dependencies.combustion_backend]
path = "../../backend"

[dependencies.combustion_common]
path = "../../common"

[dependencies.combustion_protocols]
path = "../../protocols"

[dependencies.nice_glfw]
path = "../../deps/nice_glfw"
