[package]
authors = ["Aaron Trent <novacrazy@gmail.com>"]
name = "texture_compressor"
version = "0.1.0"

[[bin]]
name = "texture_compressor"
path = "src/main.rs"

[dependencies]
capnp = "0.7.5"
capnpc = "0.7.5"
clap = "2.19.1"
glfw = "0.11.0"
glob = "0.2.11"
image = "0.10.4"

[dependencies.combustion_backend]
path = "../../combustion_backend"

[dependencies.combustion_common]
path = "../../combustion_common"

[dependencies.combustion_protocols]
path = "../../combustion_protocols"